--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <div class="image-container">
     <p style="text-align: center;"><b>This is an image:</b></p>
-    <p style="text-align: center;"><img src="C:\Users\mdsha\pic/images.jpeg"> </p>
+    <p style="text-align: center;"><img src="images.jpeg"> </p>
   </div>
 
   <div class="comments-box">
@@ -82,10 +82,10 @@
     <p style="text-align: center;"><b>This is a Link:</b></p>
     <p style="text-align: center;"><a href="https://www.facebook.com/md.shakil.khan.47038/">My Facebook account Link</a></p>
     <p style="text-align: center;"><b>This is an audio:</b></p>
-    <P style="text-align: center;"><audio controls autoplay mutab loop><source src="C:\Users\mdsha\Music/audio.mp3"></audio></p>
+    <P style="text-align: center;"><audio controls autoplay mutab loop><source src="audio.mp3"></audio></p>
     <p style="text-align: center;"><b>This is an video:</b></p>
-    <p style="text-align: center;"><video controls autoplay mutab loop><source src="C:\Users\mdsha\Videos/video.mp4"></video></p>
+    <p style="text-align: center;"><video controls autoplay mutab loop><source src="video.mp4"></video></p>
     <p style="text-align: center;"><b>This is an PDF:</b></p>
-    <p style="text-align: center;"><iframe src="C:\Users\mdsha\4-1\E-Commarce and web programming/part1.pdf" frameborder="0" width="50%" height="500"></iframe></p>
+    <p style="text-align: center;"><iframe src="part1.pdf" frameborder="0" width="50%" height="500"></iframe></p>
 </body>
 </html>
