--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
     <p style="text-align: center;"><b>This is a Link:</b></p>
     <p style="text-align: center;"><a href="https://www.facebook.com/md.shakil.khan.47038/">My Facebook account Link</a></p>
     <p style="text-align: center;"><b>This is an audio:</b></p>
-    <P style="text-align: center;"><audio src="audio.mp3" controls></audio></p>
+    <P style="text-align: center;"><audio controls>
+  <source src="audio.mp3" type="audio/mpeg">
+  Your browser does not support the audio tag.
+  </audio></p>
     <p style="text-align: center;"><b>This is an video:</b></p>
     <p style="text-align: center;"><video controls autoplay mutab loop><source src="video.mp4"></video></p>
     <p style="text-align: center;"><b>This is an PDF:</b></p>
