--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
   Your browser does not support the audio tag.
   </audio></p>
     <p style="text-align: center;"><b>This is an video:</b></p>
-    <p style="text-align: center;"><video controls autoplay mutab loop><source src="video.mp4"></video></p>
+    <video width="320" height="240" controls>
+  <source src="video.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
     <p style="text-align: center;"><b>This is an PDF:</b></p>
     <p style="text-align: center;"><iframe src="part1.pdf" frameborder="0" width="50%" height="500"></iframe></p>
 </body>
