--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
 Your browser does not support the video tag.
 </video>
     <p style="text-align: center;"><b>This is an PDF:</b></p>
-    <p style="text-align: center;"><iframe src="part1.pdf" type = "pdf" frameborder="0" width="50%" height="500"></iframe></p>
+    <p style="text-align: center;"><iframe src="part1.pdf" type = "application/pdf" frameborder="0" width="500" height="500"></iframe></p>
 </body>
 </html>
