--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
   <source src="audio.mp3" type="audio/mpeg">
   Your browser does not support the audio tag.
   </audio></p>
-    <p style="text-align: center;"><b>This is an video:</b></p>
+    <p style="text-align: center;"><b>This is an video:</b>
     <video width="320" height="240" controls>
   <source src="video.mp4" type="video/mp4">
 Your browser does not support the video tag.
-</video>
+</video></p>
     <p style="text-align: center;"><b>This is an PDF:</b></p>
-    <p style="text-align: center;"><iframe src="part1.pdf" type = "application/pdf" frameborder="0" width="500" height="500"></iframe></p>
+    <p style="text-align: center;"><iframe src="part1.pdf" width="500" height="500"></iframe></p>
 </body>
 </html>
