--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <center><video width="320" height="240" controls>
   <source src="video.mp4" type="video/mp4">
 Your browser does not support the video tag.
-</video></center></p>
+</video></center></p><br>
     <p style="text-align: center;"><b>This is an PDF:</b></p>
     <p style="text-align: center;"><iframe src="part1.pdf" width="500" height="500"></iframe></p>
 </body>
