--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </script>
 
 </body>
-    <marquee behaviour = "scroll" direction = "left" color = "black"> I am Shakil Khan</marquee>
+    <marquee behaviour = "scroll" direction = "left" color = "black"><font color = "black"> <b> I am Shakil Khan</b></font></marquee>
 
     <p style="text-align: center;"><b>This is a Link:</b></p>
     <p style="text-align: center;"><a href="https://www.facebook.com/md.shakil.khan.47038/">My Facebook account Link</a></p>
