--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
 Your browser does not support the video tag.
 </video></center></p><br>
     <p style="text-align: center;"><b>This is an PDF:</b></p>
-    <p style="text-align: center;"><iframe src="part1.pdf" width="500" height="500"></iframe></p>
+    <p style="text-align: center;"><iframe src="part1.pdf" width="50%" height="500"></iframe></p>
 </body>
 </html>
